--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Remote Control - Home</title>
-  <script defer src="/socket.io/socket.io.js"></script>
-  <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-  <script defer src="/pages/home/script.js"></script>
-</head>
-<body style="margin: 0; overflow: hidden;">
-  <video id="screenVideo" style="width: 100vw; height: 100vh; cursor: none;" autoplay="true"></video>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Remote Control - Home</title>
+    <script defer src="/pages/home/script.js"></script>
+  </head>
+  <body style="margin: 0;background-image: radial-gradient(#091218, #09090b);background-size: 100vw 100vh;">
+    <div style="
+    width: calc(100% - 300px);
+    height: 77.5px;
+    margin-left: 150px;
+"></div>
+  <h1 style="
+    font-family: system-ui;
+    font-size: 115px;
+    background: -webkit-linear-gradient(45deg, hsl(210.98deg 64.37% 51.57%), #55de9a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    line-height: 120px;
+    text-align: center;
+">Remote Desktop<br>Application</h1>
+<div id="naptha_container0932014_0707"></div></body>
 </html>
