Bug fix for dark mode in help page

--- a/client/pages/main/index.html
+++ b/client/pages/main/index.html
@@ -56,8 +56,7 @@
           opacity: 1;
         }
       }
-    </style>
-    <style>
+
       @media (prefers-color-scheme: dark) {
         #pageEmbed, #feedbackModal, #scriptEditor {
           filter: invert(95%) hue-rotate(180deg);
@@ -79,6 +78,13 @@
         }
         to {
           opacity: 1;
+        }
+      }
+    </style>
+    <style>
+      @media (prefers-color-scheme: dark) {
+        #pageEmbed, #feedbackModal, #scriptEditor {
+          filter: invert(95%) hue-rotate(180deg);
         }
       }
     </style>
