--- a/server/pages/help/markdown/markdown.html
+++ b/server/pages/help/markdown/markdown.html
@@ -26,6 +26,9 @@
     </picture>
   </a>
   <br>
+  <a href="https://www.npmjs.com/package/electron-remote-control">
+    <img src="https://badge.fury.io/js/electron-remote-control.svg">
+  </a>
   <a href="https://opensource.org/license/apache-2-0">
     <img src="https://img.shields.io/badge/License-Apache%202.0-brightgreen.svg">
   </a>
@@ -44,7 +47,7 @@
   <a href="#credits">Credits</a> •
   <a href="#license">License</a>
 </p>
-<p><img src="https://raw.githubusercontent.com/DinoscapeProgramming/Remote-Control/master/docs/static/demonstration.gif" alt="screenshot"></p>
+<p><img src="https://raw.githubusercontent.com/DinoscapeProgramming/Remote-Control/master/docs/static/demonstration.gif" alt="screenshot" style="border-radius: 8.25px;"></p>
 <h2 id="key-features">Key Features </h2>
 <ul>
 <li>Instant Connection</li>
@@ -137,7 +140,7 @@ If you're using Linux Bash for Windows, <a href="https://www.howtogeek.com/26157
 </ul>
 <h2 id="support">Support </h2>
 <a href="https://www.patreon.com/DinoscapeArmy">
-	<img src="https://c5.patreon.com/external/logo/become_a_patron_button@2x.png" width="160">
+	<img src="https://c5.patreon.com/external/logo/become_a_patron_button@2x.png" width="160" style="border-radius: 6.5px;">
 </a>
 <h2 id="you-may-also-like">You may also like... </h2>
 <ul>
