Added screen reader support

--- a/client/pages/home/index.html
+++ b/client/pages/home/index.html
@@ -402,7 +402,7 @@
           </div>
         </div>
       </div>
-      <iframe id="reviewEmbed" style="
+      <iframe id="reviewEmbed" alt="Review Embed" style="
         width: calc(100% - 76.75px);
         height: calc(100vh - 537.5px);
         border: 1px solid #bfbfbf5c;
