--- a/client/pages/main/index.html
+++ b/client/pages/main/index.html
@@ -97,6 +97,7 @@
       <div style="display: flex; flex-direction: row">
         <img
           src="../../assets/favicon.ico"
+          alt="Logo"
           style="height: 57.5px; margin-top: 17.5px; margin-left: 17.5px"
         />
         <h2
@@ -328,6 +329,7 @@
     </div>
     <iframe
       id="pageEmbed"
+      alt="Page Embed"
       class="pageEmbed"
       style="
         width: calc(100vw - 200px);
