--- a/client/pages/monitor/index.html
+++ b/client/pages/monitor/index.html
@@ -116,7 +116,7 @@
       padding-bottom: 30.75px;
     ">
       <div style="margin-top: 10px;">
-        <img src="../../assets/monitorDeviceSearchIcon.png" style="
+        <img src="../../assets/monitorDeviceSearchIcon.png" alt="Monitor Device Search Icon" style="
           margin-left: 9%;
         ">
         <p style="
