--- a/server/pages/help/markdown/markdown.html
+++ b/server/pages/help/markdown/markdown.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html><html lang="en"><head>
       <title>markdown</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
