Added screen reader support

--- a/client/pages/help/index.html
+++ b/client/pages/help/index.html
@@ -78,7 +78,7 @@
         opacity: 0.75;
       "
     ></div>
-    <iframe id="markdownEmbed" alt="Markdown Embed" style="
+    <iframe id="markdownEmbed" title="Markdown Embed" style="
       width: 100vw;
       height: calc(100vh - 60px);
       border: none;
