--- a/client/pages/main/index.html
+++ b/client/pages/main/index.html
@@ -329,7 +329,7 @@
     </div>
     <iframe
       id="pageEmbed"
-      alt="Page Embed"
+      title="Page Embed"
       class="pageEmbed"
       style="
         width: calc(100vw - 200px);
