--- a/server/pages/help/index.html
+++ b/server/pages/help/index.html
@@ -7,6 +7,6 @@
   <script defer src="/pages/help/script.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-  <iframe id="markdownEmbed" alt="Markdown Embed" style="width: 100vw; height: 100vh; border: none;" src="/pages/help/markdown/markdown.html" onerror></iframe>
+  <iframe id="markdownEmbed" title="Markdown Embed" style="width: 100vw; height: 100vh; border: none;" src="/pages/help/markdown/markdown.html" onerror></iframe>
 </body>
 </html>
