--- a/server/pages/help/markdown/markdown.html
+++ b/server/pages/help/markdown/markdown.html
@@ -27,13 +27,13 @@
   </a>
   <br>
   <a href="https://www.npmjs.com/package/electron-remote-control">
-    <img src="https://badge.fury.io/js/electron-remote-control.svg">
+    <img src="https://badge.fury.io/js/electron-remote-control.svg" alt="Package Badge">
   </a>
   <a href="https://opensource.org/license/apache-2-0">
-    <img src="https://img.shields.io/badge/License-Apache%202.0-brightgreen.svg">
+    <img src="https://img.shields.io/badge/License-Apache%202.0-brightgreen.svg" alt="License Badge">
   </a>
   <a href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0">
-    <img src="https://img.shields.io/badge/Release-1.0.0-brightgreen.svg">
+    <img src="https://img.shields.io/badge/Release-1.0.0-brightgreen.svg" alt="Release Badge">
   </a>
 </p>
 <p align="center">
@@ -140,7 +140,7 @@ If you're using Linux Bash for Windows, <a href="https://www.howtogeek.com/26157
 </ul>
 <h2 id="support">Support </h2>
 <a href="https://www.patreon.com/DinoscapeArmy">
-	<img src="https://c5.patreon.com/external/logo/become_a_patron_button@2x.png" width="160" style="border-radius: 6.5px;">
+	<img src="https://c5.patreon.com/external/logo/become_a_patron_button@2x.png" alt="Patreon Image" width="160" style="border-radius: 6.5px;">
 </a>
 <h2 id="you-may-also-like">You may also like... </h2>
 <ul>
