--- a/client/pages/remoteControl/index.html
+++ b/client/pages/remoteControl/index.html
@@ -77,7 +77,7 @@
     <link rel="icon" href="../../assets/favicon.ico" />
     <style>
       .functionButton:hover {
-        background-color: #155ce1e0 !important;
+        background-color: #155ce1d4 !important;
       }
     </style>
   </head>
@@ -116,33 +116,17 @@
           aria-hidden="true"
           style="margin-right: 1.75px"
         ></i>
-        Copy Clipboard
+        Copy Clipboard<select
+          style="background-color: transparent; border: none; color: white"
+        >
+          <option value="text">Text</option>
+          <option value="html">HTML</option>
+          <option value="image">Image</option>
+          <option value="rtf">RTF</option>
+          <option value="bookmark">Bookmark</option>
+        </select>
       </button>
       <button
-        id="copyClipboardTextButton"
-        class="functionButton"
-        style="
-          height: 27.5px;
-          font-family: system-ui;
-          border: none;
-          border-radius: 7.5px;
-          background-color: #155de1;
-          color: white;
-          padding: 15px;
-          padding-top: 7.5px;
-          padding-bottom: 25px;
-          cursor: pointer;
-          margin-top: 6.25px;
-          margin-left: 5.75px;
-        "
-      >
-        <i
-          class="fa fa-clipboard"
-          aria-hidden="true"
-          style="margin-right: 1.75px"
-        ></i>
-        Copy Clipboard Text</button
-      ><button
         id="shareFileButton"
         class="functionButton"
         style="
