--- a/client/pages/remoteControl/index.html
+++ b/client/pages/remoteControl/index.html
@@ -117,13 +117,14 @@
           style="margin-right: 1.75px"
         ></i>
         Copy Clipboard<select
+          id="copyClipboardButtonSelect"
           style="background-color: transparent; border: none; color: white"
         >
-          <option value="text">Text</option>
-          <option value="html">HTML</option>
-          <option value="image">Image</option>
-          <option value="rtf">RTF</option>
-          <option value="bookmark">Bookmark</option>
+          <option value="text" data-width="46.5px" style="color: black;">Text</option>
+          <option value="html" data-width="57.25px" style="color: black;">HTML</option>
+          <option value="image" data-width="58px" style="color: black;">Image</option>
+          <option value="rtf" data-width="46.25px" style="color: black;">RTF</option>
+          <option value="bookmark" data-width="81.25px" style="color: black;">Bookmark</option>
         </select>
       </button>
       <button
