--- a/client/pages/remoteControl/index.html
+++ b/client/pages/remoteControl/index.html
@@ -118,7 +118,7 @@
         ></i>
         Copy Clipboard<select
           id="copyClipboardButtonSelect"
-          style="background-color: transparent; border: none; color: white"
+          style="background-color: transparent; border: none; color: white; width: 46.5px;"
         >
           <option value="text" data-width="46.5px" style="color: black;">Text</option>
           <option value="html" data-width="57.25px" style="color: black;">HTML</option>
