--- a/client/pages/remoteControl/index.html
+++ b/client/pages/remoteControl/index.html
@@ -118,13 +118,28 @@
         ></i>
         Copy Clipboard<select
           id="copyClipboardButtonSelect"
-          style="background-color: transparent; border: none; color: white; width: 46.5px;"
+          style="
+            background-color: transparent;
+            border: none;
+            color: white;
+            width: 46.5px;
+          "
         >
-          <option value="text" data-width="46.5px" style="color: black;">Text</option>
-          <option value="html" data-width="57.25px" style="color: black;">HTML</option>
-          <option value="image" data-width="58px" style="color: black;">Image</option>
-          <option value="rtf" data-width="46.25px" style="color: black;">RTF</option>
-          <option value="bookmark" data-width="81.25px" style="color: black;">Bookmark</option>
+          <option value="text" data-width="46.5px" style="color: black">
+            Text
+          </option>
+          <option value="html" data-width="57.25px" style="color: black">
+            HTML
+          </option>
+          <option value="image" data-width="58px" style="color: black">
+            Image
+          </option>
+          <option value="rtf" data-width="46.25px" style="color: black">
+            RTF
+          </option>
+          <option value="bookmark" data-width="81.25px" style="color: black">
+            Bookmark
+          </option>
         </select>
       </button>
       <button
@@ -150,8 +165,24 @@
           aria-hidden="true"
           style="margin-right: 1.75px"
         ></i>
-        Share Files</button
-      ><button
+        <select
+          id="shareFileButtonSelect"
+          style="
+            background-color: transparent;
+            border: none;
+            color: white;
+            width: 46.5px;
+          "
+        >
+          <option value="send" data-width="46.5px" style="color: black">
+            Send
+          </option>
+          <option value="receive" data-width="46.5px" style="color: black">
+            Receive
+          </option></select
+        >File
+      </button>
+      <button
         id="screenshotButton"
         class="functionButton"
         style="
