Update Screenshot Feature, Added Record Feature

--- a/client/pages/remoteControl/index.html
+++ b/client/pages/remoteControl/index.html
@@ -171,13 +171,13 @@
             background-color: transparent;
             border: none;
             color: white;
-            width: 46.5px;
+            width: 52.5px;
           "
         >
-          <option value="send" data-width="46.5px" style="color: black">
+          <option value="send" data-width="52.5px" style="color: black">
             Send
           </option>
-          <option value="receive" data-width="46.5px" style="color: black">
+          <option value="receive" data-width="69.5px" style="color: black">
             Receive
           </option></select
         >File
@@ -206,6 +206,31 @@
           style="margin-right: 2.25px"
         ></i>
         Screenshot
+      </button>
+      <button
+        id="recordButton"
+        class="recordButton"
+        style="
+          height: 27.5px;
+          font-family: system-ui;
+          border: none;
+          border-radius: 7.5px;
+          background-color: #155de1;
+          color: white;
+          padding: 15px;
+          padding-top: 7.5px;
+          padding-bottom: 25px;
+          cursor: pointer;
+          margin-top: 6.25px;
+          margin-left: 5.75px;
+        "
+      >
+        <i
+          class="fa fa-circle-play"
+          aria-hidden="true"
+          style="margin-right: 2.25px"
+        ></i>
+        Record
       </button>
     </div>
     <video id="screenVideo" style="width: 100vw" autoplay="true"></video>
