--- a/client/pages/remoteControl/index.html
+++ b/client/pages/remoteControl/index.html
@@ -209,7 +209,7 @@
       </button>
       <button
         id="recordButton"
-        class="recordButton"
+        class="functionButton"
         style="
           height: 27.5px;
           font-family: system-ui;
@@ -226,7 +226,7 @@
         "
       >
         <i
-          class="fa fa-circle-play"
+          class="fa fa-play-circle"
           aria-hidden="true"
           style="margin-right: 2.25px"
         ></i>
