--- a/client/pages/main/index.html
+++ b/client/pages/main/index.html
@@ -238,6 +238,36 @@
               >Scripts
             </p>
           </div>
+          <div
+            id="debugMenuBarItem"
+            class="menuBarItem"
+            style="
+              display: none;
+              width: 185px;
+              margin-left: 7.25px;
+              height: 42.5px;
+              border-radius: 7.5px;
+              margin-bottom: -10.5px;
+              background-color: #0b8acd99;
+              cursor: pointer;
+            "
+          >
+            <p
+              style="
+                color: white;
+                font-family: system-ui;
+                margin-left: 15px;
+                padding-top: 9.5px;
+              "
+            >
+              <i
+                class="fa fa-pencil-square-o"
+                aria-hidden="true"
+                style="font-size: 16.5px; margin-right: 7.75px"
+              ></i
+              >Debug
+            </p>
+          </div>
         </div>
         <div style="position: absolute; bottom: 0">
           <div
