--- a/client/pages/settings/index.html
+++ b/client/pages/settings/index.html
@@ -83,7 +83,6 @@
       </p>
       <input
         id="searchInput"
-        class="searchInput"
         style="
           width: 100%;
           height: 35px;
@@ -304,6 +303,55 @@
           </p>
         </div>
         <label class="switch" data-type="customServer">
+          <input type="checkbox" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <div
+        style="
+          width: calc(100% - 50px);
+          height: 1px;
+          background-color: #bfbfbf78;
+          margin-top: 2.5px;
+          margin-bottom: 10.5px;
+          margin-left: 25px;
+          opacity: 0.75;
+        "
+      ></div>
+      <div style="display: flex; flex-direction: row; margin-left: 42.5px">
+        <i
+          class="fa fa-sliders"
+          aria-hidden="true"
+          style="
+            height: 100%;
+            font-size: 22px;
+            margin-top: 3.5px;
+            margin-right: 12.5px;
+          "
+        ></i>
+        <div style="display: flex; flex-direction: column">
+          <h4
+            style="
+              font-size: 15px;
+              font-weight: 600;
+              font-family: system-ui;
+              margin-top: 0;
+              margin-bottom: 0;
+            "
+          >
+            Debug Mode
+          </h4>
+          <p
+            style="
+              font-size: 13.25px;
+              font-family: system-ui;
+              margin-top: 0.25px;
+            "
+          >
+            Activate debug mode to help us fix issues faster
+          </p>
+        </div>
+        <label class="switch" data-type="debugMode">
           <input type="checkbox" />
           <span class="slider"></span>
         </label>
