--- a/client/pages/debug/index.html
+++ b/client/pages/debug/index.html
@@ -70,6 +70,7 @@
     padding: 22.5px;
     font-size: 20px;
     line-height: 27.5px;
+    color: black;
     background-color: transparent;
   "></textarea>
 </body>
