--- a/client/pages/main/index.html
+++ b/client/pages/main/index.html
@@ -247,7 +247,7 @@
               margin-left: 7.25px;
               height: 42.5px;
               border-radius: 7.5px;
-              margin-bottom: -10.5px;
+              margin-top: -10.5px;
               background-color: #0b8acd99;
               cursor: pointer;
             "
