Updated Debug Mode

--- a/client/pages/help/index.html
+++ b/client/pages/help/index.html
@@ -61,6 +61,7 @@
         <option value="/connect"></option>
         <option value="/monitor"></option>
         <option value="/scripts"></option>
+        <option value="/debug" disabled></option>
         <option value="/feedback"></option>
         <option value="/settings"></option>
         <option value="/reload"></option>
