--- a/client/pages/settings/index.html
+++ b/client/pages/settings/index.html
@@ -101,6 +101,7 @@
         <option value="/connect"></option>
         <option value="/monitor"></option>
         <option value="/scripts"></option>
+        <option value="/debug" disabled></option>
         <option value="/feedback"></option>
         <option value="/help"></option>
         <option value="/reload"></option>
@@ -108,6 +109,7 @@
         <option value="/auto-launch"></option>
         <option value="/auto-update"></option>
         <option value="/custom-server"></option>
+        <option value="/debug-mode"></option>
         <option value="/close" disabled></option>
         <option value="/exit"></option>
       </datalist>
