--- a/server/pages/help/markdown/markdown.html
+++ b/server/pages/help/markdown/markdown.html
@@ -92,6 +92,11 @@
 <li>Configure Remote Control in order to use your custom WebRTC server.</li>
 </ul>
 </li>
+<li>Debug Mode
+<ul>
+<li>Activate debug mode to help us fix issues faster.</li>
+</ul>
+</li>
 <li>Cross platform
 <ul>
 <li>Windows, macOS and Linux ready.</li>
