--- a/client/pages/connect/index.html
+++ b/client/pages/connect/index.html
@@ -53,6 +53,7 @@
         <option value="/home"></option>
         <option value="/monitor"></option>
         <option value="/scripts"></option>
+        <option value="/debug" disabled></option>
         <option value="/feedback"></option>
         <option value="/settings"></option>
         <option value="/help"></option>
