--- a/client/pages/home/index.html
+++ b/client/pages/home/index.html
@@ -49,6 +49,7 @@
         <option value="/connect"></option>
         <option value="/monitor"></option>
         <option value="/scripts"></option>
+        <option value="/debug" disabled></option>
         <option value="/feedback"></option>
         <option value="/settings"></option>
         <option value="/help"></option>
