--- a/client/pages/scripts/index.html
+++ b/client/pages/scripts/index.html
@@ -79,6 +79,7 @@
         <option value="/home"></option>
         <option value="/connect"></option>
         <option value="/monitor"></option>
+        <option value="/debug" disabled></option>
         <option value="/feedback"></option>
         <option value="/settings"></option>
         <option value="/help"></option>
