bug fixes, added favicon to server sites

--- a/server/pages/help/index.html
+++ b/server/pages/help/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Remote Control - Help</title>
   <script defer src="/pages/help/script.js"></script>
+  <link rel="icon" href="/assets/favicon.ico" />
 </head>
 <body style="margin: 0; overflow: hidden;">
   <iframe id="markdownEmbed" title="Markdown Embed" style="width: 100vw; height: 100vh; border: none;" src="/pages/help/markdown/markdown.html" onerror></iframe>
