--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -5,21 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remote Control - Home</title>
     <script defer src="/pages/home/script.js"></script>
+    <link rel="icon" href="/assets/favicon.ico" />
   </head>
-  <body style="margin: 0;background-image: radial-gradient(#091218, #09090b);background-size: 100vw 100vh;">
-    <div style="
-    width: calc(100% - 300px);
-    height: 77.5px;
-    margin-left: 150px;
-"></div>
-  <h1 style="
-    font-family: system-ui;
-    font-size: 115px;
-    background: -webkit-linear-gradient(45deg, hsl(210.98deg 64.37% 51.57%), #55de9a);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    line-height: 120px;
-    text-align: center;
-">Remote Desktop<br>Application</h1>
-<div id="naptha_container0932014_0707"></div></body>
+  <body
+    style="
+      margin: 0;
+      background-image: radial-gradient(#091218, #09090b);
+      background-size: 100vw 100vh;
+    "
+  >
+    <div
+      style="width: calc(100% - 300px); height: 77.5px; margin-left: 150px"
+    ></div>
+    <h1
+      style="
+        font-family: system-ui;
+        font-size: 115px;
+        background: -webkit-linear-gradient(
+          45deg,
+          hsl(210.98deg 64.37% 51.57%),
+          #55de9a
+        );
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        line-height: 120px;
+        text-align: center;
+      "
+    >
+      Remote Desktop<br />Application
+    </h1>
+    <div id="naptha_container0932014_0707"></div>
+  </body>
 </html>
