--- a/server/pages/reviews/index.html
+++ b/server/pages/reviews/index.html
@@ -6,6 +6,7 @@
   <title>Remote Control - Reviews</title>
   <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script defer src="/pages/reviews/script.js"></script>
+  <link rel="icon" href="/assets/favicon.ico" />
 </head>
 <body style="overflow: hidden;">
   <div style="height: 100vh; max-width: 100vw;">
