updated help readme; bug fixes

--- a/server/pages/help/markdown/markdown.html
+++ b/server/pages/help/markdown/markdown.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html><head>
       <title>markdown</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,13 +27,13 @@
   </a>
   <br>
   <a href="https://www.npmjs.com/package/electron-remote-control">
-    <img src="https://badge.fury.io/js/electron-remote-control.svg" alt="Package Badge">
+    <img src="https://badge.fury.io/js/electron-remote-control.svg">
   </a>
   <a href="https://opensource.org/license/apache-2-0">
-    <img src="https://img.shields.io/badge/License-Apache%202.0-brightgreen.svg" alt="License Badge">
+    <img src="https://img.shields.io/badge/License-Apache%202.0-brightgreen.svg">
   </a>
   <a href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0">
-    <img src="https://img.shields.io/badge/Release-1.0.0-brightgreen.svg" alt="Release Badge">
+    <img src="https://img.shields.io/badge/Release-1.0.0-brightgreen.svg">
   </a>
 </p>
 <p align="center">
@@ -145,7 +145,7 @@ If you're using Linux Bash for Windows, <a href="https://www.howtogeek.com/26157
 </ul>
 <h2 id="support">Support </h2>
 <a href="https://www.patreon.com/DinoscapeArmy">
-	<img src="https://c5.patreon.com/external/logo/become_a_patron_button@2x.png" alt="Patreon Image" width="160" style="border-radius: 6.5px;">
+	<img src="https://c5.patreon.com/external/logo/become_a_patron_button@2x.png" width="160" style="border-radius: 6.5px;">
 </a>
 <h2 id="you-may-also-like">You may also like... </h2>
 <ul>
@@ -155,7 +155,7 @@ If you're using Linux Bash for Windows, <a href="https://www.howtogeek.com/26157
 <li><a href="https://github.com/DinoscapeProgramming/DinoChess">DinoChess</a> - A chess platform for chess lovers</li>
 </ul>
 <h2 id="license">License </h2>
-<p><a href="/pages/help/LICENSE.txt">Apache-2.0</a></p>
+<p><a href="pages\help\LICENSE.txt">Apache-2.0</a></p>
 <hr>
 <blockquote>
 <p><a href="https://dinoscape.com">dinoscape.com</a> &nbsp;·&nbsp;<br>
