Added theme support

--- a/client/pages/connect/index.html
+++ b/client/pages/connect/index.html
@@ -92,6 +92,7 @@
             font-weight: 600;
             margin-left: 20px;
             font-size: 16.5px;
+            color: black;
           "
         >
           Connect with ID
@@ -103,6 +104,7 @@
               font-weight: 600;
               margin-left: 20px;
               font-size: 15.25px;
+              color: black;
             "
           >
             Your login details
@@ -115,6 +117,7 @@
               font-size: 12.5px;
               line-height: 14.5px;
               margin-top: -8.5px;
+              color: black;
             "
           >
             Your ID and password which you need to remotely control your pc
@@ -149,6 +152,7 @@
                   font-family: system-ui;
                   font-weight: 400;
                   margin-top: -12.5px;
+                  color: black;
                 "
               ></h3>
             </div>
@@ -180,6 +184,7 @@
                   font-weight: 400;
                   margin-top: -11.25px;
                   font-size: 17.5px;
+                  color: black;
                 "
               ></h3>
             </div>
@@ -229,6 +234,7 @@
               font-size: 12.5px;
               line-height: 14.5px;
               margin-top: -8.5px;
+              color: black;
             "
           >
             Connect to your device remotely with its Remote Control ID and
