--- a/client/pages/home/index.html
+++ b/client/pages/home/index.html
@@ -268,6 +268,7 @@
                     font-family: system-ui;
                     font-weight: 400;
                     margin-top: -12.5px;
+                    color: black;
                   "
                 ></h3>
               </div>
@@ -299,6 +300,7 @@
                     font-weight: 400;
                     margin-top: -11.25px;
                     font-size: 17.5px;
+                    color: black;
                   "
                 ></h3>
               </div>
