--- a/client/pages/debug/index.html
+++ b/client/pages/debug/index.html
@@ -19,7 +19,7 @@
       }
     </style>
   </head>
-  <div style="margin: 0">
+  <body style="margin: 0;">
     <div style="display: flex; flex-direction: row; width: 100vw; height: 60px">
       <p
         style="
@@ -78,7 +78,7 @@
         disabled=""
         style="
           width: calc(100% - 45px);
-          height: calc(100vh - 160px);
+          height: calc(100vh - 155px);
           resize: none;
           border: none;
           padding: 22.5px;
@@ -86,6 +86,7 @@
           line-height: 27.5px;
           color: black;
           background-color: transparent;
+          margin-bottom: -5px;
         "
       ></textarea>
       <div style="display: flex; flex-direction: row">
