--- a/client/pages/scripts/index.html
+++ b/client/pages/scripts/index.html
@@ -34,6 +34,25 @@
         background-color: #5451511c !important;
       }
 
+      .ace_scrollbar::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+      }
+
+      .ace_scrollbar::-webkit-scrollbar-track {
+        background-color: #f1f1f1;
+        border-radius: 2.5px;
+      }
+
+      .ace_scrollbar::-webkit-scrollbar-thumb {
+        background-color: #888;
+        border-radius: 5px;
+      }
+
+      .ace_scrollbar::-webkit-scrollbar-thumb:hover {
+        background-color: #555;
+      }
+
       @media (prefers-color-scheme: dark) {
         img {
           filter: invert(95%) hue-rotate(180deg);
