Fixed translucence theme border bug

--- a/client/pages/scripts/index.html
+++ b/client/pages/scripts/index.html
@@ -261,7 +261,7 @@
           "></h3>
         </div>
         <div id="scriptEditor" class="scriptEditor" style="
-          width: calc(100% - 0px);
+          width: 100%;
           height: 346px;
           resize: vertical;
           border-radius: 7.5px;
