--- a/client/pages/scripts/index.html
+++ b/client/pages/scripts/index.html
@@ -39,11 +39,6 @@
         height: 10px;
       }
 
-      .ace_scrollbar::-webkit-scrollbar-track {
-        background-color: #f1f1f1;
-        border-radius: 2.5px;
-      }
-
       .ace_scrollbar::-webkit-scrollbar-thumb {
         background-color: #888;
         border-radius: 5px;
@@ -64,7 +59,7 @@
       }
     </style>
   </head>
-  <body style="margin: 0;">
+  <body style="margin: 0; overflow-x: hidden;">
     <div style="display: flex; flex-direction: row; width: 100vw; height: 60px">
       <p
         style="
@@ -205,6 +200,7 @@
         margin-left: 35.25px;
         border-radius: 12.5px;
         margin-top: 1.25px;
+        margin-bottom: 32.5px;
         border: 0.5px solid #bfbfbf1c;
       "
     >
