Added max height to script editor

--- a/client/pages/scripts/index.html
+++ b/client/pages/scripts/index.html
@@ -259,6 +259,7 @@
         <div id="scriptEditor" class="scriptEditor" style="
           width: 100%;
           height: 346px;
+          max-height: calc(100vh - 242.25px);
           resize: vertical;
           border-radius: 7.5px;
         "></div>
