--- a/client/pages/debug/index.html
+++ b/client/pages/debug/index.html
@@ -108,6 +108,7 @@
           id="debugCodeExecutionButton"
           class="debugCodeExecutionButton"
           style="
+            cursor: pointer;
             width: 47.5px;
             height: 47.5px;
             background-color: #159be1;
