--- a/client/pages/scripts/index.html
+++ b/client/pages/scripts/index.html
@@ -59,7 +59,7 @@
       }
     </style>
   </head>
-  <body style="margin: 0; overflow-x: hidden;">
+  <body style="margin: 0; overflow: hidden;">
     <div style="display: flex; flex-direction: row; width: 100vw; height: 60px">
       <p
         style="
