--- a/client/pages/main/index.html
+++ b/client/pages/main/index.html
@@ -433,7 +433,7 @@
           <i
             style="
               cursor: pointer;
-              font: normal normal normal 48.5px/1 FontAwesome;
+              font: 48.5px/1 FontAwesome;
               margin: 60px 7.5px;
               color: #155de1;
             "
@@ -441,7 +441,7 @@
           <i
             style="
               cursor: pointer;
-              font: normal normal normal 48.5px/1 FontAwesome;
+              font: 48.5px/1 FontAwesome;
               margin: 60px 7.5px;
               color: #155de1;
             "
@@ -449,7 +449,7 @@
           ><i
             style="
               cursor: pointer;
-              font: normal normal normal 48.5px/1 FontAwesome;
+              font: 48.5px/1 FontAwesome;
               margin: 60px 7.5px;
               color: #155de1;
             "
@@ -457,7 +457,7 @@
           ><i
             style="
               cursor: pointer;
-              font: normal normal normal 48.5px/1 FontAwesome;
+              font: 48.5px/1 FontAwesome;
               margin: 60px 7.5px;
               color: #155de1;
             "
@@ -465,7 +465,7 @@
           ><i
             style="
               cursor: pointer;
-              font: normal normal normal 48.5px/1 FontAwesome;
+              font: 48.5px/1 FontAwesome;
               margin: 60px 7.5px;
               color: #155de1;
             "
