--- a/server/pages/help/markdown/markdown.html
+++ b/server/pages/help/markdown/markdown.html
@@ -169,7 +169,7 @@ If you're using Linux Bash for Windows, <a href="https://www.howtogeek.com/26157
 <li><a href="https://github.com/DinoscapeProgramming/DinoChess">DinoChess</a> - A chess platform for chess lovers</li>
 </ul>
 <h2 id="license">License </h2>
-<p><a href="https://raw.githubusercontent.com/DinoscapeProgramming/Remote-Control/master/LICENSE">Apache-2.0</a></p>
+<p><a href="/assets/LICENSE">Apache-2.0</a></p>
 <hr>
 <blockquote>
 <p><a href="https://dinoscape.com">dinoscape.com</a> &nbsp;·&nbsp;<br>
