--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -1,39 +1,146 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Remote Control - Home</title>
-    <script defer src="/pages/home/script.js"></script>
-    <link rel="icon" href="/assets/favicon.ico" />
-  </head>
-  <body
+<body style="margin: 0">
+  <div style="display: flex; flex-direction: row; padding: 13.5px">
+    <a href="/" style="position: absolute"
+      ><img
+        src="https://raw.githubusercontent.com/DinoscapeProgramming/Remote-Control/main/docs/static/logo.svg"
+        style="width: 150px; margin-top: -6.5px; margin-left: 30px"
+    /></a>
+
+    <a
+      href="/"
+      style="
+        color: #000018;
+        font-size: 8px;
+        font-weight: 500;
+        font-family: system-ui;
+        text-decoration: none;
+        margin-left: 195.5px;
+        margin-right: 16.25px;
+      "
+      >Home</a
+    >
+    <a
+      href="/resources"
+      style="
+        color: #585c67;
+        font-size: 8px;
+        font-weight: 500;
+        font-family: system-ui;
+        text-decoration: none;
+        margin-right: 16.25px;
+      "
+      >Resources</a
+    ><a
+      href="/pricing"
+      style="
+        color: #585c67;
+        font-size: 8px;
+        font-weight: 500;
+        font-family: system-ui;
+        text-decoration: none;
+        margin-right: 16.25px;
+      "
+      >Pricing</a
+    ><a
+      href="/docs"
+      style="
+        color: #585c67;
+        font-size: 8px;
+        font-weight: 500;
+        font-family: system-ui;
+        text-decoration: none;
+        margin-right: 16.25px;
+      "
+      >Docs</a
+    >
+    <a
+      href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
+      style="
+        position: absolute;
+        left: calc(100vw - 110px);
+        color: #ffffff;
+        background-color: #024eff;
+        text-decoration: none;
+        font-size: 8px;
+        font-weight: 500;
+        font-family: system-ui;
+        margin-top: -5.5px;
+        border-radius: 4.5px;
+        padding-top: 5.5px;
+        padding-bottom: 6.5px;
+        padding-left: 9.25px;
+        padding-right: 9.75px;
+      "
+      >Download</a
+    >
+  </div>
+  <div
     style="
-      margin: 0;
-      background-image: radial-gradient(#091218, #09090b);
-      background-size: 100vw 100vh;
+      width: 100%;
+      height: 0.5px;
+      background-color: #bfbfbfd9;
+      opacity: 0.25;
+    "
+  ></div>
+  <h1
+    style="
+      font-size: 20px;
+      font-weight: 700;
+      font-family: system-ui;
+      margin-top: 22.5px;
+      margin-left: 32.5px;
+      margin-right: 32.5px;
     "
   >
-    <div
-      style="width: calc(100% - 300px); height: 77.5px; margin-left: 150px"
-    ></div>
-    <h1
-      style="
-        font-family: system-ui;
-        font-size: 115px;
-        background: -webkit-linear-gradient(
-          45deg,
-          hsl(210.98deg 64.37% 51.57%),
-          #55de9a
-        );
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        line-height: 120px;
-        text-align: center;
-      "
-    >
-      Remote Desktop<br />Application
-    </h1>
-    <div id="naptha_container0932014_0707"></div>
-  </body>
-</html>
+    Top-notch open-source Remote Desktop solution for less than a penny
+  </h1>
+  <h2
+    style="
+      font-size: 10px;
+      font-weight: 600;
+      font-family: system-ui;
+      margin-top: -7.5px;
+      margin-bottom: 22.5px;
+      margin-left: 32.5px;
+    "
+  >
+    Why pay if it can be done free?
+  </h2>
+  <a
+    href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
+    style="
+      color: #ffffff;
+      background-color: #024eff;
+      text-decoration: none;
+      font-size: 8px;
+      font-weight: 500;
+      font-family: system-ui;
+      margin-left: 32.5px;
+      border-radius: 4.5px;
+      padding-top: 7.5px;
+      padding-bottom: 8.5px;
+      padding-left: 12.25px;
+      padding-right: 12.75px;
+    "
+    >Download App</a
+  >
+  <a
+    href="/self-hosting"
+    style="
+      color: black;
+      text-decoration: none;
+      font-size: 8px;
+      font-weight: 500;
+      font-family: system-ui;
+      margin-left: 1.65px;
+      border-radius: 4.5px;
+      padding-top: 7.5px;
+      padding-bottom: 8.5px;
+      padding-left: 12.25px;
+      padding-right: 12.75px;
+      border: 0.5px solid #bfbfbfb8;
+      opacity: 0.9;
+    "
+    >Self Hosting</a
+  >
+</body>
