Fixed spelling mistake (sorry, I'm German)

--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -104,7 +104,7 @@
       margin-left: 32.5px;
     "
   >
-    Why pay if it can be done free?
+    Why pay if it can be done for free?
   </h2>
   <a
     href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
