Fixed zoom issue

--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -3,26 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Remote Control</title>
+    <link rel="icon" href="/assets/favicon.ico" />
   </head>
-  <body style="margin: 0">
-    <div style="display: flex; flex-direction: row; padding: 13.5px">
+  <body style="margin: 0;">
+    <div style="display: flex; flex-direction: row; padding: 27px">
       <a href="/" style="position: absolute"
         ><img
           src="https://raw.githubusercontent.com/DinoscapeProgramming/Remote-Control/main/docs/static/logo.svg"
-          style="width: 150px; margin-top: -6.5px; margin-left: 30px"
+          style="width: 300px; margin-top: -13px; margin-left: 60px"
       /></a>
 
       <a
         href="/"
         style="
           color: #000018;
-          font-size: 8px;
+          font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
           text-decoration: none;
-          margin-left: 195.5px;
-          margin-right: 16.25px;
+          margin-left: 391px;
+          margin-right: 32.5px;
         "
         >Home</a
       >
@@ -30,33 +31,33 @@
         href="/resources"
         style="
           color: #585c67;
-          font-size: 8px;
+          font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
           text-decoration: none;
-          margin-right: 16.25px;
+          margin-right: 32.5px;
         "
         >Resources</a
       ><a
         href="/pricing"
         style="
           color: #585c67;
-          font-size: 8px;
+          font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
           text-decoration: none;
-          margin-right: 16.25px;
+          margin-right: 32.5px;
         "
         >Pricing</a
       ><a
         href="/docs"
         style="
           color: #585c67;
-          font-size: 8px;
+          font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
           text-decoration: none;
-          margin-right: 16.25px;
+          margin-right: 32.5px;
         "
         >Docs</a
       >
@@ -64,19 +65,19 @@
         href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
         style="
           position: absolute;
-          left: calc(100vw - 110px);
+          left: calc(100vw - 220px);
           color: #ffffff;
           background-color: #024eff;
           text-decoration: none;
-          font-size: 8px;
+          font-size: 16px;
           font-weight: 500;
           font-family: system-ui;
-          margin-top: -5.5px;
-          border-radius: 4.5px;
-          padding-top: 5.5px;
-          padding-bottom: 6.5px;
-          padding-left: 9.25px;
-          padding-right: 9.75px;
+          margin-top: -11px;
+          border-radius: 9px;
+          padding-top: 11px;
+          padding-bottom: 13px;
+          padding-left: 18.5px;
+          padding-right: 19.5px;
         "
         >Download</a
       >
@@ -84,31 +85,31 @@
     <div
       style="
         width: 100%;
-        height: 0.5px;
+        height: 1px;
         background-color: #bfbfbfd9;
         opacity: 0.25;
       "
     ></div>
     <h1
       style="
-        font-size: 20px;
+        font-size: 40px;
         font-weight: 700;
         font-family: system-ui;
-        margin-top: 22.5px;
-        margin-left: 32.5px;
-        margin-right: 32.5px;
+        margin-top: 45px;
+        margin-left: 65px;
+        margin-right: 65px;
       "
     >
       Top-notch open-source Remote Desktop solution for less than a penny
     </h1>
     <h2
       style="
-        font-size: 10px;
+        font-size: 20px;
         font-weight: 600;
         font-family: system-ui;
-        margin-top: -7.5px;
-        margin-bottom: 22.5px;
-        margin-left: 32.5px;
+        margin-top: -15px;
+        margin-bottom: 57.5px;
+        margin-left: 65px;
       "
     >
       Why pay if it can be done for free?
@@ -119,15 +120,15 @@
         color: #ffffff;
         background-color: #024eff;
         text-decoration: none;
-        font-size: 8px;
+        font-size: 16px;
         font-weight: 500;
         font-family: system-ui;
-        margin-left: 32.5px;
-        border-radius: 4.5px;
-        padding-top: 7.5px;
-        padding-bottom: 8.5px;
-        padding-left: 12.25px;
-        padding-right: 12.75px;
+        margin-left: 65px;
+        border-radius: 9px;
+        padding-top: 15px;
+        padding-bottom: 17px;
+        padding-left: 24.5px;
+        padding-right: 25.5px;
       "
       >Download App</a
     >
@@ -136,16 +137,16 @@
       style="
         color: black;
         text-decoration: none;
-        font-size: 8px;
+        font-size: 16px;
         font-weight: 500;
         font-family: system-ui;
-        margin-left: 1.65px;
-        border-radius: 4.5px;
-        padding-top: 7.5px;
-        padding-bottom: 8.5px;
-        padding-left: 12.25px;
-        padding-right: 12.75px;
-        border: 0.5px solid #bfbfbfb8;
+        margin-left: 7.25px;
+        border-radius: 9px;
+        padding-top: 15px;
+        padding-bottom: 17px;
+        padding-left: 24.5px;
+        padding-right: 25.5px;
+        border: 1px solid #bfbfbfb8;
         opacity: 0.9;
       "
       >Self Hosting</a
