Added features section on home page

--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -151,5 +151,70 @@
       "
       >Self Hosting</a
     >
+
+    <h3
+      style="
+        font-size: 27.5px;
+        font-family: system-ui;
+        margin-top: 82.5px;
+        margin-left: 65px;
+      "
+    >
+      Features
+    </h3>
+    <ul style="font-family: system-ui; margin-left: 43.5px">
+      <li>Instant Connection</li>
+      <li>Control over connected devices</li>
+      <ol>
+        <li>
+          Be able to control the keyboard and mouse of your connected devices.
+        </li>
+      </ol>
+      <li>Device History</li>
+      <ol>
+        <li>Connect to known devices with one click.</li>
+      </ol>
+      <li>File Sharing across multiple devices</li>
+      <li>Smart Bar with commands</li>
+      <ol>
+        <li>Navigate faster by typing commands in the upper smart bar.</li>
+      </ol>
+      <li>Device Monitoring for CPU, Memory and WLAN Usage</li>
+      <li>Script Execution with Node.js Integration</li>
+      <li>Script Store for non-programmers</li>
+      <li>Dark/Light Mode</li>
+      <li>Feedback Writing and Viewing</li>
+      <li>Full screen mode</li>
+      <ol>
+        <li>Work distraction free.</li>
+      </ol>
+      <li>Auto Launch</li>
+      <ol>
+        <li>
+          Remote Control launches automatically after you start your device.
+        </li>
+      </ol>
+      <li>Auto Update</li>
+      <ol>
+        <li>
+          Remote Control automatically updates when new updates are released.
+        </li>
+      </ol>
+      <li>Custom WebRTC Server</li>
+      <ol>
+        <li>
+          Configure Remote Control in order to use your custom WebRTC server.
+        </li>
+      </ol>
+      <li>Debug Mode</li>
+      <ol>
+        <li>Activate debug mode to help us fix issues faster.</li>
+      </ol>
+      <li>Cross platform</li>
+      <ol>
+        <li>Windows, macOS and Linux ready.</li>
+      </ol>
+      <li>In-built Tutorial Page</li>
+    </ul>
   </body>
 </html>
