Updated home page

--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Remote Control</title>
     <link rel="icon" href="/assets/favicon.ico" />
+    <style>
+      ul li, ul ol {
+        margin-bottom: 5px;
+      }
+    </style>
   </head>
   <body style="margin: 0;">
     <div style="display: flex; flex-direction: row; padding: 27px">
@@ -162,7 +167,7 @@
     >
       Features
     </h3>
-    <ul style="font-family: system-ui; margin-left: 43.5px">
+    <ul style="font-size: 17.5px; font-family: system-ui; margin-left: 43.5px">
       <li>Instant Connection</li>
       <li>Control over connected devices</li>
       <ol>
