Added newsletter section on homepage

--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -6,7 +6,8 @@
     <title>Remote Control</title>
     <link rel="icon" href="/assets/favicon.ico" />
     <style>
-      ul li, ul ol {
+      ul li,
+      ul ol {
         margin-bottom: 5px;
       }
     </style>
@@ -157,6 +158,111 @@
       >Self Hosting</a
     >
 
+    <h3
+      style="
+        font-size: 27.5px;
+        font-family: system-ui;
+        margin-top: 82.5px;
+        margin-left: 65px;
+      "
+    >
+      Join the community
+    </h3>
+    <a
+      href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
+      style="
+        color: black;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 500;
+        font-family: system-ui;
+        margin-top: -11px;
+        margin-left: 65px;
+        border-radius: 9px;
+        padding-top: 11px;
+        padding-bottom: 13px;
+        padding-left: 18.5px;
+        padding-right: 19.5px;
+        border: 1px solid #bfbfbfb8;
+        opacity: 0.9;
+      "
+      >GitHub Discussions</a
+    ><a
+      href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
+      style="
+        color: black;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 500;
+        font-family: system-ui;
+        margin-top: -11px;
+        margin-left: 11.5px;
+        border-radius: 9px;
+        padding-top: 11px;
+        padding-bottom: 13px;
+        padding-left: 18.5px;
+        padding-right: 19.5px;
+        border: 1px solid #bfbfbfb8;
+        opacity: 0.9;
+      "
+      >Discord</a
+    ><a
+      href="https://github.com/DinoscapeProgramming/Remote-Control/releases/tag/v1.0.0"
+      style="
+        color: black;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 500;
+        font-family: system-ui;
+        margin-top: -11px;
+        margin-left: 11.5px;
+        border-radius: 9px;
+        padding-top: 11px;
+        padding-bottom: 13px;
+        padding-left: 18.5px;
+        padding-right: 19.5px;
+        border: 1px solid #bfbfbfb8;
+        opacity: 0.9;
+      "
+      >Scratch</a
+    >
+    <h3
+      style="
+        font-size: 27.5px;
+        font-family: system-ui;
+        margin-top: 92.5px;
+        margin-left: 65px;
+      "
+    >
+      Sign up to our daily newsletter
+    </h3>
+    <input
+      style="
+        font-size: 15.25px;
+        width: 70%;
+        height: 40px;
+        margin-left: 65px;
+        margin-bottom: 6.25px;
+        border: 1px solid #bfbfbfb8;
+        border-radius: 50px;
+        text-align: center;
+      "
+    />
+    <button
+      style="
+        color: white;
+        background-color: #024eff;
+        font-family: system-ui;
+        width: calc(70% + 7.5px);
+        height: 42.5px;
+        margin-left: 65px;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+      "
+    >
+      Subscribe Now
+    </button>
     <h3
       style="
         font-size: 27.5px;
