--- a/server/pages/home/index.html
+++ b/server/pages/home/index.html
@@ -34,7 +34,7 @@
         >Home</a
       >
       <a
-        href="/resources"
+        href="/team"
         style="
           color: #585c67;
           font-size: 16px;
@@ -43,9 +43,9 @@
           text-decoration: none;
           margin-right: 32.5px;
         "
-        >Resources</a
+        >About us</a
       ><a
-        href="/pricing"
+        href="/changelog"
         style="
           color: #585c67;
           font-size: 16px;
@@ -54,7 +54,18 @@
           text-decoration: none;
           margin-right: 32.5px;
         "
-        >Pricing</a
+        >Changelog</a
+      ><a
+        href="/open-source"
+        style="
+          color: #585c67;
+          font-size: 16px;
+          font-weight: 500;
+          font-family: system-ui;
+          text-decoration: none;
+          margin-right: 32.5px;
+        "
+        >Open Source</a
       ><a
         href="/docs"
         style="
